compiler/tests/fail/slh/x86-64/intrinsic_kills_msf.jazz
export
fn main(reg u64 x) {
    reg u64 msf;

    msf = #init_msf();
    #[keep]
    msf = #MOV(msf);
    x = #protect(x, msf);
    [x] = 0;
}
